<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a1441278.lab2_calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                style="@style/textBig"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/amount" />
            <EditText
                android:id="@+id/etLoanAmount"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/amountHint" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/termOfLoan" />
            <EditText
                android:id="@+id/etTermOfLoan"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/termOfLoanHint" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/interest" />
            <EditText
                android:id="@+id/etInterest"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/interestHint" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:onClick="calculate"
                android:text="@string/calculate"/>
            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:onClick="clearFields"
                android:text="@string/clear"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textAlignment="center"
                style="@style/textBig"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/monthlyPayment" />
            <TextView
                android:id="@+id/tvMonthlyPayment"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/totalPayment" />
            <TextView
                android:id="@+id/tvTotalPayment"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/totalInterest" />
            <TextView
                android:id="@+id/tvTotalInterest"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="invisible"
                style="@style/error"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
